Fix scrollbars in teh 'My Machines' area on Firefox.
re: PD-5245

--- a/app/less/secondary-sidebar.less
+++ b/app/less/secondary-sidebar.less
@@ -14,7 +14,7 @@
     -ms-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
-    overflow-y:scroll;
+    overflow-y:auto;
     overflow-x:hidden;
     padding-bottom: 64px;
     max-width: 600px;
